--- a/src/app/sites/about/about.component.html
+++ b/src/app/sites/about/about.component.html
@@ -22,10 +22,11 @@
       <div class="img-section img-section-left">
 
         <div class="row">
-          <div class="col-5 animated wow fadeInLeft" data-wow-delay="0.3s">
+          <div class="col-5 animated fadeInLeft" data-wow-delay="0s">
+            <!-- animated -->
             <div class="section-picture img-a-1"></div>
           </div>
-          <div class="col-7 animated wow fadeIn" data-wow-delay="0.3s">
+          <div class="col-7 animated fadeIn" data-wow-delay="0s">
             <div class="section-text">
               <h2 class="h-article">Adresaci studiów</h2>
 
