--- a/src/app/sites/home/home.component.scss
+++ b/src/app/sites/home/home.component.scss
@@ -16,6 +16,7 @@
   background-color: #2196f3;
   background-image: url("/assets/rawpixel-653764-unsplash.jpg");
   background-position: 50% 45%;
+  background-size: cover;
 }
 #home-4 ul {
   text-align: left;
