--- a/src/app/sites/organisation/organisation.component.html
+++ b/src/app/sites/organisation/organisation.component.html
@@ -29,7 +29,8 @@
 
       </div>
 
-      <div class="view img-100vw org-1 animated fadeInUp">
+      <div class="view img-100vw org-1">
+        <!--  animated fadeInUp" data-wow-delay="0s" -->
         <!-- <div class="mask rgba-blue-light"></div> -->
       </div>
 
