--- a/src/app/sites/study-plan/study-plan.component.html
+++ b/src/app/sites/study-plan/study-plan.component.html
@@ -187,10 +187,13 @@
         </tbody>
       </table>
 
-      <p>* Studenci w trakcie trwania studiów będą mieli możliwość wybrania w ramach przedmiotu obieralnego jednego z
-        czterech przedmiotów: Grafika komputerowa, Programowanie systemów ekspertowych, Sztuczna inteligencja,
-        Technologie programistyczne usług internetowych.</p>
-
+      
+      <blockquote class="blockquote bq-primary">
+          <p>* Studenci w trakcie trwania studiów będą mieli możliwość wybrania w ramach przedmiotu obieralnego jednego z
+              czterech przedmiotów: Grafika komputerowa, Programowanie systemów ekspertowych, Sztuczna inteligencja,
+              Technologie programistyczne usług internetowych.</p>
+      </blockquote>
+    
       <blockquote class="blockquote bq-secondary program-muted">
         <p class="warn">Zastrzeżenie</p>
         <p>Wydział Elektrotechniki i Informatyki Politechniki Rzeszowskiej zastrzega sobie prawo dokonywania zmian i
