--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -72,14 +72,24 @@
   padding: 0;
 }
 
-#logo {
-  //background-image: url("/assets/prz_logo.png");
-  //background-position: center left; /* Center the image */
-  //background-repeat: no-repeat; /* Do not repeat the image */
-  //background-size: contain;
-  //padding: 7px 0 7px 80px;
-  margin: 12px 0;
-  //background-color: coral;
+.logo {
+  position: relative;
+  left: 15px;
+}
+.logo .logotype {
+  position: absolute;
+  top: -6px;
+  left:0;
+  font-size: 40px;
+}
+.logo .logotext {
+  display: flex;
+  position: relative;
+  left: 55px;
+  top: 0;
+}
+.logo .brand, .logo .name {
+  display: inline;
 }
 .logo .brand {
   font-size: 0.6em;
@@ -91,9 +101,10 @@
   // position: absolute;
   // top: 3px;
 }
-.logo strong {
+.logo .name {
   padding: 0;
   margin: 0;
+  font-weight: bold;
 }
 #logo h1, #logo h4, #logo h5 {
   padding: 2px 0;
@@ -193,7 +204,7 @@ footer h5.text-uppercase {
 #scroll-to-top {
   position: fixed;
   bottom: 1em;
-  right: 1.5em;
+  right: 0.5em;
   
 }
 #scroll-to-top a {
