--- a/src/app/sites/recruitment/recruitment.component.scss
+++ b/src/app/sites/recruitment/recruitment.component.scss
@@ -8,7 +8,7 @@ p {
     width: 100%;
 }
 .text-section {
-    padding: 0.5em 0;
+    padding: 0.5em 0 1em 0;
     width: 100%;
 }
 .text-section-first {
@@ -21,7 +21,7 @@ p {
     padding: 1.1rem;
 }
 .rules-cards .card-icon {
-    padding: 1em;
+    padding: 2em;
     color: #2196f3
 }
 
@@ -89,6 +89,7 @@ ul.stepper li > a {
     display: -ms-flexbox;
     display: flex;
     position: relative;
+    cursor: auto;
 }
 .primary-color, ul.stepper > li.active a .circle, ul.stepper > li.completed a .circle {
     background-color: #2196f3 !important;
@@ -154,7 +155,8 @@ ul.stepper li > a .label {
 }
 .step-link a {
     font-weight: normal;
-    color: rgba(0,0,0,0.6);
+    color: #2196f3;
+    text-align: right
 }
 .step-link a i {
     padding: 0 0.5em;
