Icons in programs

--- a/src/app/sites/programs/aplikacje-bazodanowe/aplikacje-bazodanowe.component.html
+++ b/src/app/sites/programs/aplikacje-bazodanowe/aplikacje-bazodanowe.component.html
@@ -35,7 +35,7 @@
 <h3>Technologie</h3>
 
 <div class="dev-icon-list">
-  <i class="devicon-c-plain"></i>
-  <i class="devicon-cplusplus-plain"></i>
-  <i class="devicon-csharp-plain"></i>
+  <i class="devicon-oracle-original" mdbTooltip="Oracle" placement="top"></i>
+  <i class="devicon-php-plain" mdbTooltip="PHP" placement="top"></i>
+
 </div>
