--- a/src/app/sites/programs/grafika-komputerowa/grafika-komputerowa.component.html
+++ b/src/app/sites/programs/grafika-komputerowa/grafika-komputerowa.component.html
@@ -44,7 +44,8 @@
 <h3>Technologie</h3>
 
 <div class="dev-icon-list">
-  <i class="devicon-c-plain"></i>
-  <i class="devicon-cplusplus-plain"></i>
-  <i class="devicon-csharp-plain"></i>
+  <i class="devicon-photoshop-plain" mdbTooltip="Adobe Photoshop" placement="top"></i>
+  <i class="devicon-illustrator-plain" mdbTooltip="Adobe Illustrator" placement="top"></i>
+  <i class="devicon-gimp-plain" mdbTooltip="Gimp" placement="top"></i>
+  <i class="devicon-inkscape-plain" mdbTooltip="Inkscape" placement="top"></i>
 </div>
