--- a/src/app/sites/programs/programowanie-w-jezyku-java/programowanie-w-jezyku-java.component.html
+++ b/src/app/sites/programs/programowanie-w-jezyku-java/programowanie-w-jezyku-java.component.html
@@ -51,7 +51,6 @@
 <h3>Technologie</h3>
 
 <div class="dev-icon-list">
-  <i class="devicon-c-plain"></i>
-  <i class="devicon-cplusplus-plain"></i>
-  <i class="devicon-csharp-plain"></i>
+  <i class="devicon-java-plain" mdbTooltip="Java" placement="top"></i>
+  <i class="devicon-tomcat-line" mdbTooltip="Tomcat" placement="top"></i>
 </div>
