--- a/src/app/sites/programs/programs.component.scss
+++ b/src/app/sites/programs/programs.component.scss
@@ -34,7 +34,7 @@ p {
  .dev-icon-list i {
     color: rgba(33, 150, 243, 1);
     font-size: 5em;
-    padding: 0 0.2em 0 0;
+    margin: 0 0.2em 0 0;
   }
 
 h3 {
