--- a/src/app/sites/programs/przedmiot-obieralny/przedmiot-obieralny.component.html
+++ b/src/app/sites/programs/przedmiot-obieralny/przedmiot-obieralny.component.html
@@ -1,3 +1,17 @@
-<p>
-  przedmiot-obieralny works!
-</p>
+<div class="program-header-list">
+
+  <div class="mask flex-center rgba-blue-strong">
+    <div class="container">
+      <div class="white-text animated fadeIn">
+
+        <div class="program-header-text">
+          <!-- <h4>Semestr II</h4> -->
+          <h2>Przedmiot obieralny</h2>
+          <p>Wybierz jeden z dostępnych przedmiotów obieralnych z listy</p>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+</div>
