--- a/src/app/sites/programs/sieci-komputerowe/sieci-komputerowe.component.html
+++ b/src/app/sites/programs/sieci-komputerowe/sieci-komputerowe.component.html
@@ -37,7 +37,7 @@
 <h3>Technologie</h3>
 
 <div class="dev-icon-list">
-  <i class="devicon-c-plain"></i>
-  <i class="devicon-cplusplus-plain"></i>
-  <i class="devicon-csharp-plain"></i>
+  <i class="devicon-apache-plain" mdbTooltip="Apache" placement="top"></i>
+  <i class="devicon-linux-plain" mdbTooltip="Linux" placement="top"></i>
+  <i class="devicon-debian-plain" mdbTooltip="Debian" placement="top"></i>
 </div>
