--- a/src/app/sites/programs/systemy-rozproszone/systemy-rozproszone.component.html
+++ b/src/app/sites/programs/systemy-rozproszone/systemy-rozproszone.component.html
@@ -28,12 +28,12 @@
 
 <h3>Projekt</h3>
 
-<p>Indywidualny projekt z zakresu aplikacji rozproszonych obliczeniowych lub e- biznesowych.</p>
+<p>Indywidualny projekt z zakresu aplikacji rozproszonych obliczeniowych lub e-biznesowych.</p>
 
-<h3>Technologie</h3>
+<!-- <h3>Technologie</h3>
 
 <div class="dev-icon-list">
   <i class="devicon-c-plain"></i>
   <i class="devicon-cplusplus-plain"></i>
   <i class="devicon-csharp-plain"></i>
-</div>
+</div> -->
