--- a/src/app/sites/programs/sztuczna-inteligencja/sztuczna-inteligencja.component.html
+++ b/src/app/sites/programs/sztuczna-inteligencja/sztuczna-inteligencja.component.html
@@ -41,10 +41,10 @@
     
     <p>Projekt i implementacja aplikacji bazy danych w wybranym systemie. Proste sklepy internetowe.</p> -->
   
-  <h3>Technologie</h3>
+  <!-- <h3>Technologie</h3>
   
   <div class="dev-icon-list">
     <i class="devicon-c-plain"></i>
     <i class="devicon-cplusplus-plain"></i>
     <i class="devicon-csharp-plain"></i>
-  </div>
+  </div> -->
