--- a/src/app/sites/programs/technologie-sieci-web/technologie-sieci-web.component.html
+++ b/src/app/sites/programs/technologie-sieci-web/technologie-sieci-web.component.html
@@ -50,7 +50,11 @@
 <h3>Technologie</h3>
 
 <div class="dev-icon-list">
-    <i class="devicon-c-plain"></i>
-    <i class="devicon-cplusplus-plain"></i>
-    <i class="devicon-csharp-plain"></i>
+    <i class="devicon-html5-plain" mdbTooltip="HTML5" placement="top"></i>
+    <i class="devicon-css3-plain" mdbTooltip="CSS3" placement="top"></i>
+    <i class="devicon-javascript-plain" mdbTooltip="JavaScript" placement="top"></i>
+    <i class="devicon-angularjs-plain" mdbTooltip="AngularJs" placement="top"></i>
+    <i class="devicon-php-plain" mdbTooltip="PHP" placement="top"></i>
+    <i class="devicon-apache-plain" mdbTooltip="Apache" placement="top"></i>
+   
 </div>
