--- a/src/app/sites/programs/projektowanie-baz-danych/projektowanie-baz-danych.component.html
+++ b/src/app/sites/programs/projektowanie-baz-danych/projektowanie-baz-danych.component.html
@@ -35,7 +35,6 @@
 <h3>Technologie</h3>
 
 <div class="dev-icon-list">
-  <i class="devicon-c-plain"></i>
-  <i class="devicon-cplusplus-plain"></i>
-  <i class="devicon-csharp-plain"></i>
+  <i class="devicon-mysql-plain" mdbTooltip="MySQL" placement="top"></i>
+    <i class="devicon-oracle-original" mdbTooltip="Oracle" placement="top"></i>
 </div>
