--- a/src/app/sites/programs/technologie-programistyczne-uslug-internetowych/technologie-programistyczne-uslug-internetowych.component.html
+++ b/src/app/sites/programs/technologie-programistyczne-uslug-internetowych/technologie-programistyczne-uslug-internetowych.component.html
@@ -67,7 +67,6 @@
 <h3>Technologie</h3>
 
 <div class="dev-icon-list">
-  <i class="devicon-c-plain"></i>
-  <i class="devicon-cplusplus-plain"></i>
-  <i class="devicon-csharp-plain"></i>
+  <i class="devicon-dot-net-plain" mdbTooltip=".NET" placement="top"></i>
+  <i class="devicon-csharp-plain" mdbTooltip="C#" placement="top"></i>
 </div>
